feat: adding in backend api server. tried to fix default rendering cube
